# hubitat

./: .gitignore  .hubitat.json.example  CLAUDE.md  Pipfile  deploy.js  package-lock.json  package.json  pyproject.toml  readme.md  repository.json
.claude/commands/: deploy.md
.run/: Retrieve Moen Flo Manager.run.xml  Upload Moen Flo Manager.run.xml  Upload Moen Flow Manager.run.xml
MoenFloManager/: license.txt  packageManifest.json  readme.md
MoenFloManager/apps/: FloByMoenDeviceInstance.groovy  FloByMoenDeviceManager.groovy  FloByMoenLocationInstance.groovy  MoenDeviceManager.groovy  MoenLocationInstance.groovy  MoenSmartShutoffInstance.groovy  MoenSmartWaterDetectorInstance.groovy
MoenFloManager/drivers/: FloByMoenLocation.groovy  FloByMoenWaterValve.groovy  MoenLocation.groovy  MoenSmartShutoff.groovy  MoenSmartWaterDetector.groovy  MoenSmartWaterShutoff.groovy
MoenFloSmartShutoff/: moenflo.groovy  packageManifest.json
MoenFloStandalone/: packageManifest.json  readme.md
MoenFloStandalone/drivers/: moenflo.groovy  moenflodetector.groovy
apps/MoenFlo/: MoenFlo.groovy  MoenFloInstance.groovy
docs/superpowers/plans/: 2026-06-04-moen-oauth2-migration.md
docs/superpowers/specs/: 2026-06-04-moen-oauth2-migration-design.md
drivers/MoenFloSmartShutoff/: MoenFloShutoffValve.groovy  MoenFloWaterValve.groovy  moenflo.groovy  packageManifest.json
tools/: mock_service.py  uploader.py
tools/utils/: __init__.py  api.py  enums.py  file.py  manifest.py  session_factory.py  source_watchdog.py  utils.py
